kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
spec:
  type: LoadBalancer
  selector:
    app: minecraft
  ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
